--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="principal">
     <div align="center">
-        <img src="logo.PNG" alt="">
+        <img src="iniciopagina/logo.PNG" alt="">
     </div>
 <br>
 
@@ -19,7 +19,7 @@
 <br>
 <br>
 
-        <img class="img" src="poster.jpg" alt="Imagen" usemap="#Mapa" >
+        <img class="img" src="iniciopagina/poster.jpg" alt="Imagen" usemap="#Mapa" >
 
             <map name="Mapa">
                 <area shape="rect" coords="497,153,582,125" href="formulario.html" alt="Breaking">
