--- a/formulario.html
+++ b/formulario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breaking Bad - Que comience el juego!</title>
-    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="iniciopagina/icon.png" type="image/x-icon">
 </head>
 <body>
     <Form name="Breaking Bad - Que comience el juego!" method="post">
