--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breaking Bad - Que comience el juego!</title>
     <link rel="shortcut icon" href="iniciopagina/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="letra.css">
 </head>
 <body>
     <Form name="Breaking Bad - Que comience el juego!" method="post">
