--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QueVeo Breaking Bad</title>
+    <title>Que Veo Breaking Bad</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="principal.css">
     
@@ -11,7 +11,7 @@
 </head>
 <body class="principal">
     <div align="center">
-        <img src="iniciopagina/logo.PNG" alt="">
+        <img src="iniciopagina/logo.PNG" alt="" style="margin-top: -650px;">
     </div>
 <br>
 
